# rag-chatbot-django

./: .gitignore  LICENSE  README.md  docker-compose.yml  wrapper.sh
backend/: Dockerfile  README.md  bashrc  pyproject.toml
backend/app/: .coveragerc
backend/app/account/: admin.py  apps.py  backends.py  drf_urls.py  drf_views.py  forms.py  models.py  serializers.py  urls.py  views.py
backend/app/account/locale/ja/LC_MESSAGES/: django.po
backend/app/account/management/commands/: custom_createsuperuser.py
backend/app/account/migrations/: 0001_initial.py
backend/app/account/tests/: test_form.py  test_models.py  test_views.py
backend/app/all_tests/: conftest.py
backend/app/all_tests/account_tests/: factories.py  test_drf.py  test_form.py  test_models.py  test_views.py
backend/app/all_tests/chatbot_tests/: conftest.py  factories.py  test_drf.py  test_executors.py  test_form.py  test_forms.py  test_langgraph_related_classes.py  test_llms.py  test_models.py  test_privates.py  test_stream.py  test_tasks.py  test_tools.py  test_views.py
backend/app/chatbot/: admin.py  apps.py  consumers.py  drf_urls.py  drf_views.py  forms.py  routers.py  schema.py  serializers.py  stream.py  tasks.py  urls.py  views.py  ws_routing.py
backend/app/chatbot/locale/ja/LC_MESSAGES/: django.po
backend/app/chatbot/migrations/: 0001_initial.py  0002_alter_assistant_is_interrupt.py  0002_alter_embedding_emb.py  0003_alter_baseconfig_config_alter_embedding_emb.py  0003_documentfile_is_active.py  0004_alter_baseconfig_config_alter_embedding_emb.py  0005_remove_embedding_emb_embedding_emb_type.py  0006_alter_assistant_tools_alter_embedding_emb_type.py  0007_alter_assistant_options_alter_embedding_emb_type_and_more.py  0008_alter_embedding_emb_type.py
backend/app/chatbot/models/: __init__.py  agents.py  rag.py
backend/app/chatbot/models/utils/: __init__.py  _client.py  _customFireworks.py  _customLLMWrapper.py  _customRetriever.py  _local.py  checkpoint.py  executers.py  executors.py  ingest.py  llms.py  tools.py  vectorstore.py
backend/app/config/: asgi.py  celery.py  context.py  define_module.py  drf_urls.py  settings.py  urls.py  wsgi.py
backend/app/config/locale/ja/LC_MESSAGES/: django.po
backend/app/config/settings/: base.py  development.py  production.py
backend/app/custom_templatetags/: utils.py
backend/app/locale/ja/LC_MESSAGES/: django.po
backend/app/templates/: 403.html  404.html  405.html  500.html  base.html  breadcrubs.html  custom_form.html  err_base.html  header.html
backend/app/templates/account/: index.html  login.html  profile_form.html  user_profile.html
backend/app/templates/chatbot/: agent_form.html  assistant_form.html  base_setting_form.html  document_file_form.html  embedding_form.html  index.html  settings.html  target_assistant.html  target_thread.html  tasks.html  thread_form.html  tool_form.html
backend/app/templates/renderer/: config_form.html  custom_model_form.html
celery/: entrypoint.sh
database/: Dockerfile
database/initdb.d/: 0001_init.sql
env_files/: README.md
env_files/backend/: README.md  docker.env
env_files/database/: README.md
redis/: Dockerfile  init.sh  redis.conf
